# scavenger_hunt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  start.sh
data/: game.yaml
game_data/: game.yaml  location_log.ndjson
notebooks/: present_data.ipynb  scavenger_hunt.ipynb
private_data/: participants.example.txt
src/: admin_streamlit_app.py  constants.py  create_coordinate_file.py  streamlit_app.py
src/helpers/: __init__.py  calculate_bearing.py  determine_next_location.py  handle_question.py  log_ndjson.py
src/models/: __init__.py  answer_option.py  game.py  location.py  question_type.py  state.py  team_state.py
tests/: test_constants.py  test_game_data.py
tests/helpers/: test_calculate_bearing.py  test_determine_next_location.py  test_handle_question.py  test_log_ndjson.py
tests/integration/: notest_streamlit_app_load_test.py  test_admin_streamlit_app.py  test_streamlit_app.py
tests/models/: test_answer_options.py  test_game.py  test_location.py  test_state.py  test_team_state.py
